--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  auto_route: ^9.2.2
+  fpdart: ^1.1.1
+  flutter_bloc: ^8.1.6
+  bloc: ^8.1.4
+  shared_preferences: ^2.3.5
+  dio: ^5.7.0
+  equatable: ^2.0.7
+  freezed_annotation: ^2.4.4
+  json_serializable: ^6.9.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +47,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.14
+  freezed: ^2.5.7
+  auto_route_generator: ^9.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
