--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   equatable: ^2.0.7
   freezed_annotation: ^2.4.4
   json_serializable: ^6.9.0
+  flutter_easyloading: ^3.0.5
+  fluttertoast: ^8.2.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
